src/component/Topbar/Topbar.css
/* ... */
.topbar-program li:hover {
    background-color: none;
}

/* .topbar-kabar-ul,
.topbar-program-ul{
    overflow-y: auto;
    direction: ltr;
} */

.kabar-acordion {
    width: 100%;
    height: 45px;
    background-color: white;
    border: 1px solid black;
    line-height: 45px;
    border-radius: 10px;
    padding-left: 12px;
    cursor: pointer;
    position: relative;
}

.button-topbar {
    width: 160px;
    height: 32px;
    color: white;
    background-color: #424FC8;
    font-family: 'Open Sans' , sans-serif;
    font-weight: 700;
    font-size: 16px;
    line-height: 32px;
    border: none;
    border-radius: 20px;
    margin-bottom: 7px;
}

.topbar-kabar{
    width: 450px;
    height: 566px;  
    position: absolute;
    left:450px;
    overflow-y: auto;
    direction: ltr;
    border-radius: 10px;
}

::-webkit-scrollbar {
    width: 11px;
}

::-webkit-scrollbar-track {
    box-shadow: inset 0 0 5px grey; 
    border-radius: 0 10px 10px 0;
}

::-webkit-scrollbar-thumb {
    background: #272727; 
    border-radius: 10px;
}

.top-bar-navigation {
    display: flex;
    align-items: center;
    height: 100%;

}

.top-bar-logo-title h1{
    text-align: center;
    font-size: 10px;
    color: white;
    line-height: 11px;
    font-weight: 600;
}

.top-bar-logo {
    margin-left: 10px;
}



.top-bar-navigation .logo-kemenko {
    padding-left: 11px;
    height: 80px;
    margin-left: 14px;
}

.logo-simonev{
    height: 58px;
}

.top-bar-logo-simonev {
    margin-right: 61px;
}

.spacer {
    flex: 1;
}

.top-bar-menu ul li {
    display: inline-block;
}

.top-bar-menu ul li a{
    text-decoration: none;
}

.top-bar-menu-3 {
    margin-right: 26px;
}

.top-bar-menu-2 {
    margin-right: 55px;
}

.top-bar-menu-1 {
    margin-right: 60px;
}

.logo-megamenu {
    width: 75px;
    text-align:center;
    display: inline-block;
}

.topbar-kabar-head {
    width: 100%;
    height: 90px;
}

.topbar-head-head {
    text-align: center;
    line-height: 90px;
    font-weight: 800;
}   

.kabar-mega-li {
    height: fit-content;
    margin-bottom: 6px;
    padding: 0;
}

.kabar-mega-div {
    height: fit-content;
    width: 100%;
    background-color: white;
    padding: 12px;
    border-radius: 10px;
    border: 1px solid black;
    position: relative;
}

.kabar-mega-div>.fas.fa-chevron-up,
.kabar-acordion>.fas.fa-chevron-down {
    font-size: 20px;
    text-align: center;
    border: none;
    padding: 0;
    height: 30px;
    width: 30px;
    border-radius: 3px;
    cursor: pointer;
    position: absolute;
    top: 12px;
    left: 320px;
}

.kabar-mega-judul {
    height: fit-content;
    width: 90%;
}

.kabar-mega-image {
    width: 100%;
    text-align: center;
}

.kabar-mega-image>img{
    width: 200px;
    height: auto;
    margin: 10px auto;
}

.kabar-mega-deskripsi {
    height: fit-content;
    font-weight: 600px;
    width: 90%;
    margin: 16px 20px;
    text-align: justify;
}
/* ... */

